--- a/PPCMD/Properties/launchSettings.json
+++ b/PPCMD/Properties/launchSettings.json
@@ -22,7 +22,9 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7008;http://localhost:5202",
+      //"applicationUrl": "https://localhost:7008;http://localhost:5202",
+      // 👇 this is what allows other computers to connect
+      "applicationUrl": "http://0.0.0.0:7008;https://0.0.0.0:7009;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
